--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">create a website for free</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
+<section class="engine"><a href="https://mobiri.se/o">portfolio website templates</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
 
     
 
@@ -155,11 +155,11 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">تواصل معنا</h5>
-                <p class="mbr-text">qanooni@gmail.com</p>
+                <p class="mbr-text">qanooni.sa@gmail.com</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">شاركنا رأيك و اقتراحاتك</h5>
-                <p class="mbr-text">qanooni@gmail.com</p>
+                <p class="mbr-text">qanooni.sa@gmail.com</p>
             </div>
         </div>
         <div class="footer-lower">
