create github pages

--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
 
 <!-- Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123756946-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123822455-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-123756946-1');
+  gtag('config', 'UA-123822455-1');
 </script>
-
 <!-- /Google Analytics -->
 
 
@@ -71,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
+<section class="engine"><a href="https://mobiri.se/b">create your own website for free</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
 
     
 
@@ -154,11 +153,11 @@
                 <p class="mbr-text">جدة - المملكة العربية السعودية</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">تواصل معنا</h5>
+                <h5 class="pb-3"><p><a href="mailto:qanooni.sa@gmail.com"></a>تواصل معنا</p></h5>
                 <p class="mbr-text">qanooni.sa@gmail.com</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">شاركنا رأيك و اقتراحاتك</h5>
+                <h5 class="pb-3">شاركنا رأيك<a href="mailto:qanooni.sa@gmail.com" class="text-primary"> و اقتراحاتك</a></h5>
                 <p class="mbr-text">qanooni.sa@gmail.com</p>
             </div>
         </div>
