--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">create your own website for free</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
+<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
 
     
 
@@ -86,7 +86,7 @@
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                            <a href="https://mobirise.com/">
+                            <a href="https://goo.gl/forms/QX3jij1BoOeA9wbs2">
                                 <span class="mbr-iconfont mbri-cust-feedback" style="color: rgb(196, 188, 59);"></span>
                             </a>
                             </div>
@@ -96,7 +96,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="https://goo.gl/forms/QX3jij1BoOeA9wbs2">
                                     <span class="mbr-iconfont mbri-left-right" style="color: rgb(196, 188, 59);"></span>
                                 </a>
                             </div>
@@ -106,7 +106,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="https://goo.gl/forms/QX3jij1BoOeA9wbs2">
                                     <span class="mbr-iconfont mbri-edit" style="color: rgb(196, 188, 59);"></span>
                                 </a>
                             </div>
@@ -115,7 +115,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="https://goo.gl/forms/QX3jij1BoOeA9wbs2">
                                     <span class="mbr-iconfont mbri-globe-2" style="color: rgb(196, 188, 59);"></span>
                                 </a>
                             </div>
