--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
+<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="header12 cid-r0xjbVxozN mbr-fullscreen" id="header12-7">
 
     
 
@@ -79,7 +79,7 @@
     <div class="container  ">
             <div class="media-container">
                 <div class="col-md-12 align-center">
-                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"><br>قانونـي</h1>
+                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"><br>قانوني</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">.نسعى للوصل بين مقدمي الخدمات القانونية و المستفيدين من منشآت صغيرة و متوسطة أو أفراد وضمان <strong><em>أسعار معقولة</em></strong> و مناسبة للجميع <br><br></p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-success display-4" href="https://goo.gl/forms/QX3jij1BoOeA9wbs2">قدم طلبك الآن</a></div>
 
